All colors changing

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       </section>
       <section class="container">
         <h2>Multiplier</h2>
-        <div id="color2" class="bands" data-multiplier>
+        <div id="color2" class="bands" data-multiplier-band>
           <div class="box black">black</div>
           <div class="box brown">brown</div>
           <div class="box red">red</div>
@@ -265,7 +265,7 @@
       </section>
       <section class="container">
         <h2>Tolerance</h2>
-        <div id="color3" class="bands" data-resistence>
+        <div id="color3" class="bands" data-resistance-band>
           <div class="box brown">brown</div>
           <div class="box red">red</div>
           <div class="box green">green</div>
