Package.json creation + Resistor.js fixes

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <div class="selection" data-container>
       <section class="container">
         <h2>Band 1</h2>
-        <div id="color0" class="bands" data-first-band data-band="1">
+        <div id="color0" class="bands" data-band="1">
           <div class="box black">black</div>
           <div class="box brown">brown</div>
           <div class="box red">red</div>
@@ -233,7 +233,7 @@
       </section>
       <section class="container">
         <h2>Band 2</h2>
-        <div id="color1" class="bands" data-second-band data-band="2">
+        <div id="color1" class="bands" data-band="2">
           <div class="box black">black</div>
           <div class="box brown">brown</div>
           <div class="box red">red</div>
@@ -248,7 +248,7 @@
       </section>
       <section class="container">
         <h2>Multiplier</h2>
-        <div id="color2" class="bands" data-multiplier-band data-band="3">
+        <div id="color2" class="bands" data-band="3">
           <div class="box black">black</div>
           <div class="box brown">brown</div>
           <div class="box red">red</div>
@@ -265,7 +265,7 @@
       </section>
       <section class="container">
         <h2>Tolerance</h2>
-        <div id="color3" class="bands" data-resistance-band data-band="4">
+        <div id="color3" class="bands" data-band="4">
           <div class="box brown">brown</div>
           <div class="box red">red</div>
           <div class="box green">green</div>
@@ -278,9 +278,9 @@
       </section>
     </div>
     <div class="lookup">
-      <div class="resistor">
+      <div class="resistor" >
         <div class="wire wire--1"></div>
-        <div class="ceramic">
+        <div class="ceramic" data-resistor>
           <div id="b0" class="band red" data-display-first-band></div>
           <div id="b1" class="band green" data-display-second-band></div>
           <div id="b2" class="band violet" data-display-multiplier-band></div>
