--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
       <div class="resistor" >
         <div class="wire wire--1"></div>
         <div class="ceramic" data-resistor>
-          <div id="b0" class="band red" data-display-first-band></div>
-          <div id="b1" class="band green" data-display-second-band></div>
-          <div id="b2" class="band violet" data-display-multiplier-band></div>
-          <div id="b3" class="band gold" data-display-resistance-band></div>
+          <div id="b0" class="band red"></div>
+          <div id="b1" class="band green"></div>
+          <div id="b2" class="band violet"></div>
+          <div id="b3" class="band gold"></div>
         </div>
         <div class="wire wire--2"></div>
       </div>
-      <div class="answer">Resistor value: 250M Ohms ±5%</div>
+      <div class="answer" data-answer>Resistor value: 250M Ohms ±5%</div>
     </div>
   </div>
   <script src="index.js" type="module"></script>
