--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.png" type="image/png">
-  <script defer src="index.js"></script>
+  <script defer src="index.js" type="module"></script>
   <title>Resistor Calculator</title>
 
   <style>
